--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-COPY *.csproj ./
+COPY ["Warehouse.Api.csproj", "./"] 
 RUN dotnet restore
 
 COPY . .
@@ -10,5 +10,8 @@ RUN dotnet publish -c Release -o /app/publish
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/publish .
+
 ENV ASPNETCORE_URLS=http://+:80
-ENTRYPOINT ["dotnet", "BackendApp.dll"]
+EXPOSE 80
+
+ENTRYPOINT ["dotnet", "Warehouse.Api.dll"]
